# libcrypt

./:   .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: app.py  main.py
src/app/: LibcryptApp.py
src/panes/: info_pane.py  tree_pane.py
src/scripts/: load_variables_by_environment.sh
src/utils/: get_git_current_branch.py
src/widgets/: InformationWidget.py  directory_tree.py  environment_selector.py  information_widget.py
